--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 
 <h3 id="welcome-to-my-knowledge-base">Welcome to My Knowledge Base</h3>
 <p>If you think of your thoughts instead as small fires, they can be comforting and warm when kept to yourself. But by sharing them, you create a beacon—something that might light the way for others or offer them warmth as well. Here, I'm sharing these fires in hopes that they might offer others a bit of light or warmth, just as they did for me.</p>
-<p>Like any skilled fire-tender, I've had help nurturing these flames. Friends, family, and AI have been my collaborator, helping me stoke and shape the embers of my thoughts into brighter, clearer expressions. Every spark, every initial flame, came from my own mind—but my many companions helped me tend the fire, making it burn stronger and steadier. These pages are a mix of my curiosity, insights, and collaborations. They are things that would never have existed had I not taken the first step to bring them to life.</p>
+<p>I have been a fortunate fire-tender, and I've had help nurturing these flames. Friends, family, and AIs have been my collaborators, helping me stoke and shape the embers of my thoughts into brighter, clearer expressions. Every spark, every initial flame, came from my own mind—but my many companions helped me tend the fire, making it burn stronger and steadier. These pages are a mix of my curiosity, insights, and collaborations. They are things that would never have existed had I not taken the first step to bring them to life.</p>
 <p>So, have a look around. Maybe something here will inspire your own small fires.</p>
 
 
